test/reader/tglyph/error/section/skip-level-1.tglyph
▮▮ Section Lv.2

Text text.

▮▮ Section Lv.2

Text text.

▮ Section Lv.1

Text text.

▮▮▮ Section Lv.3

Text text.

▮ Section Lv.1

Text text.

▮▮ Section Lv.2

Text text.

▮ Section Lv.1

Text text.
